- add modal style and behavior - edit form

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./modal.css">
+    <script type="text/javascript" src="./sign-up-modal.js" onload="console.log('js loaded');"></script>
 
     <title>T&C Kare Haven, LLC</title>
   </head>
@@ -81,20 +83,21 @@
           <img src="./assets/yellow-two-tone.jpg" alt="">
           <div class="totally-center">
             <h3 class="text-black">Bed for as low as $600/mo.</h3>
-            <a class="btn btn-primary btn-lg" href="./contact-us/" role="button">Book Now</a>
+            <button type="button" class="btn btn-primary" id="bookBtn" onclick="openModal();">Book Now</button>
+            <!-- <a class="btn btn-primary btn-lg" href="./contact-us/" role="button">Book Now</a> -->
           </div>
         </div>
       </div>
     </div> 
 
       <!-- Modal for sign up form -->
-      <div id="signUpModal" class="modal">
+      <div id="signUpModal" class="modal" onload="openModal();">
 
         <!-- Modal content -->
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="close" onclick="closeModal();">&times;</span>
 
-            <form action="" method="post" onsubmit="">
+            <form action="https://google.com" method="post" target="_self" autocomplete="on">
               <div class="mb-3"> <!-- First Name -->
                   <label for="firstName" class="form-label">First Name</label>
                   <input type="text" class="form-control" id="firstName" required>
@@ -114,7 +117,7 @@
                 <div id="phoneHelp" class="form-text">We'll never share your phone number with anyone else.</div>
               </div>
               <div class="mb-3"> <!-- Date -->
-                <label for="moveDate" class="form-label">Move-In Date</label>
+                <label for="moveDate" class="form-label">Requested Move-In Date</label>
                 <input type="date" class="form-control" id="moveDate" required>
               </div>
               
