--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="./modal.css">
+    <link rel="stylesheet" href="../modal.css">
     
 
     <title>CONTACT US | T&C Kare Haven, LLC</title>
@@ -34,7 +34,10 @@
 
     <h1 class="totally-center">Contact Us</h1>
 
-    <form action="http://google.com" method="post" onsubmit="event.preventDefault(); delaySend(3);" name="contactForm">
+    <!-- to not have the google forms confirmation page pop up -->
+    <!-- <iframe src="#" id="no-target" name="no-target" style="display: none;"></iframe> -->
+
+    <form action="./contact-form.php" method="post" name="contactForm" autocomplete="on">
         <div class="mb-3">
             <label for="firstName" class="form-label">First Name</label>
             <input type="text" class="form-control" id="firstName" required>
@@ -52,7 +55,7 @@
             <label class="form-message" for="form-message">Your message</label>
             <textarea class="form-control" name="message" id="form-message" cols="50" rows="5" required></textarea>
         </div>
-        <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
+        <button type="submit" class="btn btn-primary" id="submitBtn" name="submitBtn">Submit</button>
         <!-- todo connect to a google form -->
     </form>
 
@@ -80,6 +83,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper todo remove js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script src="./modal.js"></script>
+    <!-- <script type="text/javascript" src="./modal.js"></script> -->
+    <!-- <script src="./form.js"></script> -->
   </body>
 </html>
