- edit action script - change name input from 2 to 1 - change email name - remove submit btn name

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -38,27 +38,22 @@
 
     <h1 class="totally-center">Contact Us</h1>
 
-    <!-- <form action="./contact-form.php" method="post" name="contactForm" autocomplete="on" onsubmit="handleformsubmit(this)"> -->
-    <form class="gform form-elements" id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbwI9qIgsgy3Ernk5G6dfgtDPUO6JS0dwEpG4rg6nEx2N0ZBcbA0hCclpprx1mHBgro/exec">
+    <form class="gform form-elements" id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbwUDQ-lLuayhI6oEbawBsqQY0b3I_-fKCqICrKFscwMChe13VZJSOM85TU7oRtBB8j7/exec">
 
         <div class="mb-3">
-            <label for="firstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="firstName" name="firstName" required>
-        </div>
-        <div class="mb-3">
-            <label for="lastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="lastName" name="lastName" required>
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" name="name" required>
         </div>
         <div class="mb-3">
           <label for="emailInput" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="emailInput" name="emailInput" aria-describedby="emailHelp" required>
+          <input type="email" class="form-control" id="emailInput" name="email" aria-describedby="emailHelp" required>
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
             <label class="form-message" for="form-message">Your message</label>
             <textarea class="form-control" name="message" id="form-message" cols="50" rows="5" required></textarea>
         </div>
-        <button type="submit" class="btn btn-primary" id="submitBtn" name="submitBtn">Submit</button>
+        <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
         
   </form>
 
