--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -38,7 +38,7 @@
 
     <h1 class="totally-center">Contact Us</h1>
 
-    <form class="gform form-elements" id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbwUDQ-lLuayhI6oEbawBsqQY0b3I_-fKCqICrKFscwMChe13VZJSOM85TU7oRtBB8j7/exec">
+    <form class="gform form-elements" id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbyRKWRG9bhbhKzAOCmk5lWz46lVAeDwvZqMnsTsA54fPHRcjzPTReNikkMv3gJuGWWGXw/exec">
 
         <div class="mb-3">
             <label for="name" class="form-label">Name</label>
@@ -63,7 +63,6 @@
     <h4>We will get back to you soon!</h4>
   </div>
 
-<!-- todo send -->
 <!-- todo (MAYBE) add referal page -->
 <!-- todo (MAYBE) add pricing section on bottom of home page -->
 <!-- todo get dns information to connect domain -->
@@ -78,6 +77,6 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper todo remove js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script data-cfasync="false" type="text/javascript" src="./form.js"></script>
+    <script data-cfasync="false" type="text/javascript" src="../form.js"></script>
   </body>
 </html>
