positioning of content for different screen sizes

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       </header>
     </div>
 
-    <div class="container bg-light pt-2 pb-2">
+    <div class="m-3 bg-light pt-2 pb-2">
         <div class="row g-0">
           <div class="col-md-6 col-sm-12 totally-center">
-            <h1>A Sure Place of Comfort</h1>
+            <h1 class="comfort">A Sure Place of Comfort</h1>
           </div>
           <div class="col-md-6 col-sm-12">
             <div class="row g-0">
@@ -60,22 +60,22 @@
 
     <h1 class="totally-center serve-message">We are here to serve you!</h1>
 
-    <div class="container serve-categories">
+    <div class="serve-categories mx-auto">
       <div class="row">
-        <div class="col-md-4 col-sm-1">
+        <div class="col-md-4 col-sm-12">
           <img src="./assets/veterans.png" alt="Veterans">
         </div>
-        <div class="col-md-4 col-sm-1">
+        <div class="col-md-4 col-sm-12">
           <img src="./assets/homeless.png" alt="Homeless">
         </div>
-        <div class="col-md-4 col-sm-1">
+        <div class="col-md-4 col-sm-12">
           <img src="./assets/re-entry.png" alt="Ex-Offender/Re-entry">
         </div>
       </div>
     </div>
 
-    <div class="container">
-      <div class="row more-details">
+    <div class="mt-3">
+      <div class="row more-details mx-auto">
         <div class="col-md-8 col-sm-12">
           <img src="./assets/amenities.png" alt="List of amenities">
         </div>
