fix header logo link to homepage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class=""> <!-- sample header from B5 -->
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="/" class="ml-2 d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <a href="./" class="ml-2 d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
           <img class="me-2" style="width:2rem; height:auto" src="./assets/logo.png" alt="T&C Kare Haven logo">
           <span class="fs-4">T&C Kare Haven</span>
         </a>
